--- a/main.ipynb
+++ b/main.ipynb
@@ -7,26 +7,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import os\n",
-    "import zipfile\n",
-    "\n",
-    "with zipfile.ZipFile('/Users/viktoriasazonova/Milk/antibiotics/tetracycline.zip', 'r') as zip_ref:\n",
-    "    zip_ref.extractall('data')\n",
-    "\n",
-    "with zipfile.ZipFile('/Users/viktoriasazonova/Milk/antibiotics/cefazoline.zip', 'r') as zip_ref:\n",
-    "    zip_ref.extractall('data')\n",
-    "\n",
-    "with zipfile.ZipFile('/Users/viktoriasazonova/Milk/antibiotics/ceftiofur.zip', 'r') as zip_ref:\n",
-    "    zip_ref.extractall('data')\n",
-    "\n",
-    "with zipfile.ZipFile('/Users/viktoriasazonova/Milk/antibiotics/milk.zip', 'r') as zip_ref:\n",
-    "    zip_ref.extractall('data')\n",
-    "\n",
-    "with zipfile.ZipFile('/Users/viktoriasazonova/Milk/antibiotics/penicillin.zip', 'r') as zip_ref:\n",
-    "    zip_ref.extractall('data')\n",
-    "\n",
-    "with zipfile.ZipFile('/Users/viktoriasazonova/Milk/antibiotics/streptomycin.zip', 'r') as zip_ref:\n",
-    "    zip_ref.extractall('data')"
+    "import os"
    ]
   },
   {
@@ -635,57 +616,6 @@
     "\n",
     "plt.suptitle('Вольамперограммы', fontsize=14)\n",
     "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "           NAME  CONCENTRATION      -0.8    -0.795     -0.79   -0.785  \\\n",
-      "0  streptomycin          1e-05 -0.000089  -0.00006 -0.000048 -0.00004   \n",
-      "0  streptomycin          1e-07 -0.000087 -0.000084 -0.000082 -0.00008   \n",
-      "\n",
-      "      -0.78    -0.775     -0.77    -0.765  ...    -0.755     -0.76    -0.765  \\\n",
-      "0 -0.000039 -0.000035 -0.000032 -0.000029  ... -0.000037 -0.000037 -0.000038   \n",
-      "0 -0.000077 -0.000075 -0.000074 -0.000072  ... -0.000069  -0.00007  -0.00007   \n",
-      "\n",
-      "      -0.77    -0.775     -0.78    -0.785     -0.79    -0.795  TARGET  \n",
-      "0 -0.000038 -0.000038 -0.000038 -0.000038 -0.000038 -0.000038       1  \n",
-      "0  -0.00007  -0.00007 -0.000071 -0.000071 -0.000071 -0.000072       1  \n",
-      "\n",
-      "[2 rows x 1043 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "data['TARGET'] = data['NAME'].apply(lambda x: 0 if x == 'milk' else 1)\n",
-    "\n",
-    "print(data.head(2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1377, 1040) (1377,)\n"
-     ]
-    }
-   ],
-   "source": [
-    "X = data.drop(columns=['NAME', 'CONCENTRATION', 'TARGET'])\n",
-    "y = data['TARGET']\n",
-    "\n",
-    "print(X.shape, y.shape)"
    ]
   }
  ],
